# vercel-clone

./: README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/aws/: mod.rs  upload_object.rs
backend/src/config/: redis.rs
backend/src/handlers/: deploy.rs  mod.rs  root.rs  upload.rs
backend/src/utils/: id_generator.rs  mod.rs
backend/tests/: dev_test.rs  request.rest
builder/: .gitignore  Cargo.toml  Dockerfile  run.sh
builder/src/: main.rs
builder/src/aws/: download_object.rs  mod.rs
builder/src/config/: mod.rs  redis.rs
builder/src/utils/: build_project.rs  deploy.rs  file_utils.rs  mod.rs
frontend/: bun.lockb  package.json
frontend/src/: App.tsx
