[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.22.0"
axum = "0.7.5"
dotenv = "0.15.0"
git2 = "0.18.3"
hyper = "1.2.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
