[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.22.0"
dotenv = "0.15.0"